--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,15 @@
 version: '3.1'
 services:
-  api:
-    image: lotosbin/xtask.api
+  dev_server:
+    image: lotosbin/idea_generic_task_server
     build:
       context: .
-      dockerfile: xtask.api/Dockerfile
+      dockerfile: idea_generic_task_server/Dockerfile
     env_file:
       - ./.env
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+  prd_server:
+    image: lotosbin/idea_generic_task_server
+    environment:
+      - ASPNETCORE_ZENTAO_HOST=https://demo.zentao.pm/
