--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,11 @@ services:
       - ./.env
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+    ports:
+      - "5000:80"
   prd_server:
     image: lotosbin/idea_generic_task_server
     environment:
       - ASPNETCORE_ZENTAO_HOST=https://demo.zentao.pm/
+    ports:
+      - "5000:80"
