--- a/idea_generic_task_server/idea_generic_task_server.csproj
+++ b/idea_generic_task_server/idea_generic_task_server.csproj
@@ -19,6 +19,7 @@
     </ItemGroup>
     <ItemGroup>
         <Folder Include="Core\" />
+        <Folder Include="Data\Providers\Redmine" />
         <Folder Include="Docs" />
     </ItemGroup>
 </Project>
